# ArbitrageStation

./: .gitignore  README.md  SHAREABLE_NOTES.txt  dev_notes.md  docker-compose.yml  memory_updates.md  pyproject.toml  start.bat
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: error_handlers.py  main.py  readiness.py  requirements.txt  ruff.toml
backend/api/: ai_analyst.py  exchanges.py  settings.py  spread_arb.py  trading.py  websocket.py
backend/core/: arbitrage_engine.py  equity_collector.py  exchange_profile.py  okx_private_ws.py  pnl_v2_logic.py  risk_manager.py  spread_stats.py  time_utils.py
backend/db/: __init__.py  bootstrap.py  engine.py  types.py
backend/domains/: __init__.py
backend/services/: email_service.py
backend/shared/: __init__.py  db.py  errors.py  logging.py  time.py
backend/strategies/: base.py  cross_exchange.py
backend/tests/: test_datetime_guard.py  test_domain_router_service_boundary.py  test_domain_service_integrations_boundary.py  test_exchange_manager_leverage_fix.py  test_funding_ingest_pagination.py  test_line_limit_checker_tool.py  test_main_error_envelope.py  test_main_no_ai_analyst_router.py  test_main_runtime_entry_boundary.py  test_market_read_provider.py  test_no_chain_imports_gate.py  (+17 more)
docs/: ccxt-pro-ws-migration-report-2026-03-23.md  mainline-ccxt-interface-inventory-2026-03-25.md  mainline-interface-inventory-2026-03-25.md
frontend/: Dockerfile  biome.json  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
scripts/: quality-gate-backend.sh  quality-gate-frontend.sh
(+500 files in other folders)
